--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -158,7 +158,7 @@ input, select, textarea {
     transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
     border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
     text-decoration: none;
-    color: inherit;
+    color: #b2b5ec;
   }
 
     a:hover {
@@ -1119,22 +1119,6 @@ input, select, textarea {
       height: 100%;
     }
 
-    #bg:before {
-      -moz-transition: background-color 2.5s ease-in-out;
-      -webkit-transition: background-color 2.5s ease-in-out;
-      -ms-transition: background-color 2.5s ease-in-out;
-      transition: background-color 2.5s ease-in-out;
-      -moz-transition-delay: 0.75s;
-      -webkit-transition-delay: 0.75s;
-      -ms-transition-delay: 0.75s;
-      transition-delay: 0.75s;
-      background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("overlay.png");
-      background-size: auto, 256px 256px;
-      background-position: center, center;
-      background-repeat: no-repeat, repeat;
-      z-index: 2;
-    }
-
     #bg:after {
       -moz-transform: scale(1.125);
       -webkit-transform: scale(1.125);
@@ -1164,6 +1148,7 @@ input, select, textarea {
 
     body.is-preload #bg:before {
       background-color: #000000;
+      /*opacity: 0;*/
     }
 
 /* Wrapper */
@@ -1650,6 +1635,7 @@ input, select, textarea {
 
   body.is-preload #bg:before {
     background-color: transparent;
+     /*opacity: 0;*/
   }
 
 /* Header */
@@ -1669,6 +1655,7 @@ input, select, textarea {
       max-height: none;
       padding: 3rem 2rem;
       opacity: 1;
+      
     }
 
 /* Main */
