--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1099,7 +1099,7 @@ input, select, textarea {
     -webkit-transform: scale(1.0);
     -ms-transform: scale(1.0);
     transform: scale(1.0);
-    -webkit-backface-visibility: hidden;
+ /*   -webkit-backface-visibility: hidden;*/
     position: fixed;
     top: 0;
     left: 0;
@@ -1519,8 +1519,8 @@ input, select, textarea {
       position: relative;
       width: 40rem;
       max-width: 100%;
-      background-color: rgba(27, 31, 34, 0.85);
-      border-radius: 4px;
+/*      background-color: rgba(27, 31, 34, 0.85);
+*/      border-radius: 4px;
       opacity: 1;
     }
 
